# sount-transit-board

./: pyproject.toml
src/: code.py  config.py  metro_api.py  secrets.py  settings.toml  train_board.py
