[tool.poetry]
name = "sount-transit-board"
version = "0.1.0"
description = ""
authors = ["Ben Neiman <bensneiman@gmail.com>"]
readme = "README.md"
packages = [{include = "sount_transit_board"}]

[tool.poetry.dependencies]
python = "^3.10"
board = "^1.0"
adafruit-circuitpython-matrixportal = "^3.2.0"
secrets = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
